--- a/src/basic-table.html
+++ b/src/basic-table.html
@@ -161,7 +161,7 @@
               </a>
             </li>
             <li class="nav-item">
-              <a class='sidebar-link' href="charts.html">
+              <a class='sidebar-link' href="dashboard.html">
                 <span class="icon-holder">
                   <i class="c-indigo-500 ti-bar-chart"></i>
                 </span>
