added get request for all campaigns

--- a/src/forms.html
+++ b/src/forms.html
@@ -162,15 +162,16 @@
                 <span class="title">Dashboard</span>
               </a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class='sidebar-link' href="email.html">
                 <span class="icon-holder">
                   <i class="c-brown-500 ti-bar-chart"></i>
                 </span>
-                <span class="title">Coupan Code Verification</span>
+                <span class="title">Coupon Code Verification</span>
               </a>
-            </li>
+            </li> -->
             <li class="nav-item">
+
               <a class='sidebar-link' href="blank.html">
                 <span class="icon-holder">
                   <i class="c-indigo-500 ti-bar-chart"></i>
@@ -197,12 +198,12 @@
               </a>
               <ul class="dropdown-menu">
                 <li class="nav-item dropdown">
-                  <a href="javascript:void(0);" id="createCampaignBtn">
+                  <a href="forms.html" id="createCampaignBtn">
                     <span>Create Campaign</span>
                   </a>
                 </li>
                 <li class="nav-item dropdown">
-                  <a href="javascript:void(0);">
+                  <a href="buttons.html">
                     <span>View Campaign</span>
                     
                   </a>
@@ -487,9 +488,7 @@
                                         <div class="form-group col-6">
                                           <label for="categoryDropdown" >Category</label>
                                           <select name="categoryId" id="categoryDropdown" class="form-control">
-                                            <option value="foodAndBederages">Food and Beverages</option>
-                                            <option value="clothing">clothing</option>
-                                            <option value="other">other</option>
+                                            
                                           </select>
                                         </div>
                                         <div class="form-group col-6">
@@ -531,15 +530,15 @@
                                                   </div>
                                                   <div class="form-group col-6" id="fixedTxt" >
                                                       <label for="fixedTxt" >Fixed discount in rupees</label>
-                                                      <input class="form-control" type="number"  id="baseDiscountAmount">
+                                                      <input class="form-control disBase" type="number"  id="baseDiscountAmount">
                                                     </div>
                                                   <div class="form-group col-6" id="percentDiscountTxt" >
                                                     <label for="percentDiscountTxt" >Enter discount percentage</label>
-                                                    <input class="form-control" type="number"  >
+                                                    <input class="form-control disBase" type="number"  >
                                                   </div>
                                                   <div class="form-group col-6" id="freeMealDiscountTxt" >
                                                     <label for="freeMealTxt" >Enter details</label>
-                                                    <input class="form-control" type="text"  >
+                                                    <input class="form-control disBase" type="text"  >
                                                   </div>
                                                 </div>
                                                 <div class="row">
