--- a/src/index.html
+++ b/src/index.html
@@ -79,11 +79,11 @@
         <form id="loginForm" method="POST" >
           <div class="form-group">
             <label class="text-normal text-dark">Email</label>
-            <input class="form-control" type="email" id="loginUn" placeholder="John Doe" value="test@testmail.com">
+            <input class="form-control" type="email" id="loginUn" placeholder="John Doe" value="merchant_test1@uninama.com">
           </div>
           <div class="form-group">
             <label class="text-normal text-dark">Password</label>
-            <input type="password" class="form-control" id="loginPw" placeholder="Password" value="test-password">
+            <input type="password" class="form-control" id="loginPw" placeholder="Password" value="12345">
           </div>
           <div class="form-group">
             <div class="peers ai-c jc-sb fxw-nw">
