--- a/src/blank.html
+++ b/src/blank.html
@@ -128,14 +128,14 @@
                 <span class="title">Dashboard</span>
               </a>
             </li>
-            <li class="nav-item">
+            <!-- <li class="nav-item">
               <a class='sidebar-link' href="blank.html">
                 <span class="icon-holder">
                   <i class="c-indigo-500 ti-bar-chart"></i>
                 </span>
                 <span class="title">Coupan Code Verification</span>
               </a>
-            </li>
+            </li> -->
             <li class="nav-item">
               <a class='sidebar-link' href="charts.html">
                 <span class="icon-holder">
