--- a/src/blank.html
+++ b/src/blank.html
@@ -162,7 +162,7 @@
                   </a>
                 </li>
                 <li class="nav-item dropdown">
-                  <a href="javascript:void(0);">
+                  <a href="buttons.html">
                     <span>View Campaign</span>
                     
                   </a>
