--- a/src/charts.html
+++ b/src/charts.html
@@ -108,7 +108,7 @@
                   <div class="peers ai-c fxw-nw">
                     <div class="peer">
                       <div class="logo">
-                        <img src="assets/static/images/logo.png" alt="">
+                        <img class="img-fluid" src="assets/static/images/logo.png" alt=""> 
                       </div>
                     </div>
                     <div class="peer peer-greed">
@@ -138,7 +138,7 @@
                       <div class="peers ai-c fxw-nw">
                         <div class="peer">
                           <div class="logo">
-                            <img src="assets/static/images/logo.png" alt="">
+                            <img class="img-fluid" src="assets/static/images/logo.png" alt="">
                           </div>
                         </div>
                         <div class="peer peer-greed">
@@ -458,7 +458,7 @@
         </div>
 
         <!-- ### $App Screen Content ### -->
-        <main class='main-content bgc-grey-100'>
+        <!-- <main class='main-content bgc-grey-100'>
           <div id='mainContent'>
             <div class="row gap-20 masonry pos-r">
               <div class="masonry-sizer col-md-6 pos-a"></div>
@@ -584,7 +584,7 @@
               </div>
             </div>
           </div>
-        </main>
+        </main> -->
 
         <!-- ### $App Screen Footer ### -->
         <footer class="bdT ta-c p-30 lh-0 fsz-sm c-grey-600">
