--- a/src/index.html
+++ b/src/index.html
@@ -70,7 +70,7 @@
       <div class="d-n@sm- peer peer-greed h-100 pos-r bgr-n bgpX-c bgpY-c bgsz-cv" style='background-image: url("assets/static/images/bg.jpg")'>
         <div class="pos-a centerXY">
           <div class="bgc-white bdrs-50p pos-r" style='width: 120px; height: 120px;'>
-            <img class="pos-a centerXY" src="assets/static/images/logo.png" alt="">
+            <img  class="pos-a centerXY img-fluid" src="assets/static/images/logo.png" alt="">
           </div>
         </div>
       </div>
@@ -79,11 +79,11 @@
         <form id="loginForm" method="POST" >
           <div class="form-group">
             <label class="text-normal text-dark">Email</label>
-            <input class="form-control" type="email" id="loginUn" placeholder="John Doe" value="merchant_test1@uninama.com">
+            <input class="form-control" type="email" id="loginUn" placeholder="John Doe" value="">
           </div>
           <div class="form-group">
             <label class="text-normal text-dark">Password</label>
-            <input type="password" class="form-control" id="loginPw" placeholder="Password" value="12345">
+            <input type="password" class="form-control" id="loginPw" placeholder="Password" value="">
           </div>
           <div class="form-group">
             <div class="peers ai-c jc-sb fxw-nw">
