--- a/src/forms.html
+++ b/src/forms.html
@@ -133,7 +133,7 @@
                   <div class="peers ai-c fxw-nw">
                     <div class="peer">
                       <div class="logo">
-                        <img src="assets/static/images/logo.png" alt="">
+                        <img class="img-fluid" src="assets/static/images/logo.png" alt="">
                       </div>
                     </div>
                     <div class="peer peer-greed">
